# python-project-lvl3

./: .gitignore  Makefile  README.md  pyproject.toml
.github/workflows/: project_action.yml
page_loader/: __init__.py  cli.py  io.py  local_html.py  localization.py  logger.py  make.py  page_loader.py  storage.py  urls.py
page_loader/scripts/: page_loader.py
tests/: test_load.py
tests/fixtures/: test.html  test1.css  test2.js
